Fixed bottom border alignment on menu items when hovering and the color of those items

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,7 +3,7 @@ $max-width: 80em;
 
 /* Color variables */
 $blue: #446e9b;
-$dark-blue: #474d57;
+$dark-blue: #3c4c5d;
 $light-blue: #66afe9;
 $blue-green: #019875;
 $white: #f9f9f9;
